--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header>
             <h1>Pokobi</h1>
-            <p>置き場。</p>
+            <p>なんか作ったもの置き場</p>
         </header>
 
         <main>
