--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="tool-card">
                     <h3>Valorant カスタムマッチ チーム分け & マップ選択ツール</h3>
                     <p>Valorantのカスタムマッチで、プレイヤーのランクを考慮して均等なチーム分けとランダムなマップ選択を自動で行うツール。</p>
-                    <a href="https://pokobi.github.io/pokobi.github.io-valorant-team-tool/" class="button">ツールへ移動</a>
+                    <a href="https://pokobi.github.io/valorant-team-tool/" class="button">ツールへ移動</a>
                 </div>
 
                 </section>
