--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                     <p>Valorantのカスタムマッチで、プレイヤーのランクを考慮して均等なチーム分けとランダムなマップ選択を自動で行うツール。</p>
                     <a href="https://pokobi.github.io/valorant-team-tool/" class="button">ツールへ移動</a>
                 </div>
+                <div class="tool-card">
+                    <h3>YouTube Music History Analyzer</h3>
+                    <p>YouTube Musicの再生履歴データ (watch-history.json) を読み込み、あなたの音楽の趣向を詳細に分析・可視化するツール。</p>
+                    <a href="https://pokobi.github.io/YouTube-Music-History-Analyzer/" class="button">ツールへ移動</a>
+                </div>
 
                 </section>
         </main>
